--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Calendar</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" href="font-awesome.min.css">
-    <link rel="stylesheet" href="all.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -44,6 +44,6 @@
     </div>
 </div>
 
-<script async src="all.js"></script>
+<script async src="script.js"></script>
 </body>
 </html>
